--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mssql": "^7.3.5",
+    "mysql2": "^3.14.0",
     "node-mailjet": "^3.3.7",
     "nodemon": "^2.0.12",
     "redis": "^4.3.1"
